BAP-4039: User can move widgets by clicking buttons, links etc. - fix collapse border

--- a/src/Oro/Bundle/DashboardBundle/Resources/public/css/less/dashboard.less
+++ b/src/Oro/Bundle/DashboardBundle/Resources/public/css/less/dashboard.less
@@ -118,7 +118,10 @@
     .title {
       padding-left: 28px;
       padding-right: 0;
-      border-bottom: 1px solid #ddd;
+    }
+
+    .row-fluid {
+      border-top: 1px solid #ddd;
     }
 
     .dashboard-widget-content {
@@ -146,8 +149,8 @@
     text-align: center;
   }
   .dashboard-widget.collapsed {
-    .title {
-      border-bottom: none;
+    .row-fluid {
+      border-top: none;
     }
     height: 43px;
     overflow: hidden;
